@@ -236,7 +236,8 @@ def print_table(table, table_name, block_size = None):
                 fmt = "%3d," * ELEMS_PER_LINE + " /* U+%04X */"
                 mult = MAX_UNICODE / len(table)
                 for i in range(0, len(table), ELEMS_PER_LINE):
-                        print(fmt % (table[i:i+ELEMS_PER_LINE] + (i * mult,)))
+                        print(fmt % (table[i:i+ELEMS_PER_LINE] + 
+                          (int(i * mult),)))
         else:
                 if block_size > ELEMS_PER_LINE:
                         el = ELEMS_PER_LINE
@@ -484,6 +485,20 @@ print("const uint32_t PRIV(ucd_caseless_sets)[] = {0};")
 print("#else")
 print()
 print("const char *PRIV(unicode_version) = \"{}\";".format(unicode_version))
+print()
+print("/* If the 32-bit library is run in non-32-bit mode, character values")
+print("greater than 0x10ffff may be encountered. For these we set up a")
+print("special record. */")
+print()
+print("#if PCRE2_CODE_UNIT_WIDTH == 32")
+print("const ucd_record PRIV(dummy_ucd_record)[] = {{")
+print("  ucp_Common,    /* script */")
+print("  ucp_Cn,        /* type unassigned */")
+print("  ucp_gbOther,   /* grapheme break property */")
+print("  0,             /* case set */")
+print("  0,             /* other case */")
+print("  }};")
+print("#endif")
 print()
 print(record_struct)
 
